fix issue #3 room title (message view header) gaps.

--- a/vector-im-slate-theme-by-sbts.css
+++ b/vector-im-slate-theme-by-sbts.css
@@ -76,11 +76,21 @@
   .mx_EventTile_content .markdown-body a {
     color: darkblue;
   }
-
+/*  .mx_RoomView_messagePanel .mx_fadable .gm-autoshow .gm-scrollbar-container {*/
+  .mx_RoomView_messagePanel {
+	margin-left: -4px;
+	/*padding-left: -15px;*/
+	/*margin-right: -15px;*/
+	/*padding-right: 2px;*/
+  }
 
 /* Title area in Message Panel */
   .mx_RoomView .mx_RoomHeader {
     background-color: #181818;
+	margin-left: -4px;
+	padding-left: 5px;
+	margin-right: -5px;
+	padding-right: 2px;
   }
   .mx_RoomHeader_rightRow {  /* Leave Room and Search Icons */
     background-color: #181818;
